--- a/views/index.html
+++ b/views/index.html
@@ -9,8 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="/style.css">
-    
+
     <script src="https://unpkg.com/mithril/mithril.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+
     <script src="/client.js" defer></script>
   </head>
   <body>
