--- a/views/index.html
+++ b/views/index.html
@@ -15,6 +15,7 @@
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
 
     <script src="/client.js" defer></script>
+    <script src="https://button.glitch.me/button.js" data-style="glitch"></script>
   </head>
   <body>
     <h1>Loading the amazing</h1>
